{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 104,
  "lineage": "338bb1a4-bced-2345-4a23-8d1836e62a77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:590183708030:instance/i-0983d0c300dcba327",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0983d0c300dcba327",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09b659b2d607c031c"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b659b2d607c031c",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_ip": "18.232.101.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093f2def4bc6a2788",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0757dd609b8fe0873",
            "tags": {
              "Name": "Prometheus"
            },
            "tags_all": {
              "Name": "Prometheus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d19918ec0e2bef9c"
            ]
          },
          "dependencies": [
            "aws_key_pair.Monitoring_key",
            "aws_network_interface.prometheus",
            "aws_security_group.prometheus-security-group",
            "aws_subnet.Monitoring-subnet",
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183708030:internet-gateway/igw-0f4426bf1594a960b",
            "id": "igw-0f4426bf1594a960b",
            "owner_id": "590183708030",
            "tags": {
              "Name": "Project Monitoring"
            },
            "tags_all": {
              "Name": "Project Monitoring"
            },
            "vpc_id": "vpc-0fbaa9bc68614a2b4"
          },
          "dependencies": [
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183708030:network-interface/eni-09b659b2d607c031c",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d5db3bf6307a04c9",
                "device_index": 0,
                "instance": "i-0983d0c300dcba327"
              }
            ],
            "id": "eni-09b659b2d607c031c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:99:47:f9:62:d3",
            "owner_id": "590183708030",
            "private_ip": "10.0.1.100",
            "private_ip_list": [
              "10.0.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d19918ec0e2bef9c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0757dd609b8fe0873",
            "tags": {
              "Name": "prometheus_network_interface"
            },
            "tags_all": {
              "Name": "prometheus_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.prometheus-security-group",
            "aws_subnet.Monitoring-subnet",
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Monitoring_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183708030:route-table/rtb-0d6b932bebda491b1",
            "id": "rtb-0d6b932bebda491b1",
            "owner_id": "590183708030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4426bf1594a960b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Monitoring Route Table"
            },
            "tags_all": {
              "Name": "Monitoring Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa9bc68614a2b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "monitoring_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0b084630403302b",
            "route_table_id": "rtb-0d6b932bebda491b1",
            "subnet_id": "subnet-0757dd609b8fe0873"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Monitoring_rt",
            "aws_subnet.Monitoring-subnet",
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prometheus-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183708030:security-group/sg-0d19918ec0e2bef9c",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d19918ec0e2bef9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "prometheus port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "prometheus port",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "prometheus port",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "prometheus-sg-tf",
            "name_prefix": "",
            "owner_id": "590183708030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Prometheus"
            },
            "tags_all": {
              "Name": "Prometheus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa9bc68614a2b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Monitoring-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183708030:subnet/subnet-0757dd609b8fe0873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0757dd609b8fe0873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183708030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monitoring-subnet"
            },
            "tags_all": {
              "Name": "Monitoring-subnet"
            },
            "vpc_id": "vpc-0fbaa9bc68614a2b4"
          },
          "dependencies": [
            "aws_vpc.Monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183708030:vpc/vpc-0fbaa9bc68614a2b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a20a32f401a40ca",
            "default_route_table_id": "rtb-0d965e66a0d44e03b",
            "default_security_group_id": "sg-0bb47d5df58cbb989",
            "dhcp_options_id": "dopt-0b550c97d55d16ee4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fbaa9bc68614a2b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d965e66a0d44e03b",
            "owner_id": "590183708030",
            "tags": {
              "Name": "Monitoring"
            },
            "tags_all": {
              "Name": "Monitoring"
            }
          }
        }
      ]
    }
  ]
}